--- a/style.css
+++ b/style.css
@@ -16,7 +16,6 @@ body {
     align-items: center;
     background-color: #f7f7f7;
     font-family: Arial, Helvetica, sans-serif;
-    overflow: hidden;
 }
 
 header, footer {
@@ -37,12 +36,12 @@ header h1 {
     justify-content: center;
     align-items: center;
     flex-grow: 1;
+    max-width: 600px;
+    margin: 0 15px;
 }
 
 .calendar__container {
     background-color: #f2f2f2;
-    min-width: 400px;
-    margin: 0 15px;
 }
 
 .container {
